--- a/upload/index.html
+++ b/upload/index.html
@@ -11,7 +11,7 @@
 	<title>Gestor Fotos Casak</title>
 
 	<!-- Favicon -->
-	<link rel="shortcut icon" type="image/png" href="/../favicon.png"/>
+	<link rel="shortcut icon" type="image/png" href="/../resources/favicon.png"/>
 
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,500,600,700|Open+Sans" rel="stylesheet">
